Fixed an issue where the whole page would reload when submitting a form

--- a/pages/html/admin_page.html
+++ b/pages/html/admin_page.html
@@ -44,7 +44,7 @@
       </container>
     </div>
     <div class="text main">
-      <section class="main_section main_section_active" id="m1">
+      <section class="main_section" id="m1">
         <h2>Welcome, <?=$_SESSION["staff_username"]?>.</h2>
       </section>
       <section class="main_section" id="m2">
