Added dropdowns for suggested inputs when a user selects their name and location

--- a/pages/html/admin_page.html
+++ b/pages/html/admin_page.html
@@ -116,7 +116,7 @@
                 <label>Male</label>
                 <input type="radio" name="new_user_gender" value="f">
                 <label>Female</label>
-                <input type="radio" checked="checked" name="new_user_gender" value="o">
+                <input type="radio" name="new_user_gender" value="o">
                 <label>Other</label>
               </div>
             </div>
