--- a/pages/html/home_page.html
+++ b/pages/html/home_page.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <head>
-<script src="../../scripts/home_page_functions.js"></script>
+<!-- jQuery UI -->
+<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+
+<!-- autocomplete scripts -->
+<script type="text/javascript" src="../../scripts/autocomplete_scripts.js"></script>
+
+<!-- home page javascript functions -->
+<script type="text/javascript" src="../../scripts/home_page_functions.js"></script>
+
 <meta charset="UTF-8" lang="en">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Home | DOYRMS Registration</title>
@@ -40,9 +50,12 @@
       <header>
         <h2>Sign In</h2>
       </header>
-      <form id="student_sign_in_form" class="text" action="" method="POST">
-        <label for="student_sign_in_name"><h3>Your Initials</h3></label>
-        <input type="text" id="student_sign_in_name" name="student_sign_in_name" placeholder="" value="">
+      <form id="user_sign_in_form" class="text" action="" method="POST">
+        <label for="sign_in_initials_field"><h3>Your Initials</h3></label>
+        <div class="input_wrapper">
+          <input type="text" id="sign_in_initials_field" name="sign_in_initials_field" placeholder="" value="" autocomplete="off"/>
+          <ul id="sign_in_initials_suggestions"></ul>
+        </div>
         <divider></divider>
         <input class="blue_button" id="student_sign_in_submit" type="submit" value="Submit">
       </form>
@@ -51,12 +64,18 @@
       <header>
         <h2>Sign Out</h2>
       </header>
-      <form id="student_sign_out_form" class="text" action="" method="POST">
-        <label for="student_sign_out_name"><h3>Your Initials</h3></label>
-        <input type="text" id="student_sign_out_name" name="student_sign_out_name" placeholder="" value="">
+      <form id="user_sign_out_form" class="text" action="" method="POST">
+        <label for="sign_out_initials_field"><h3>Your Initials</h3></label>
+        <div class="input_wrapper">
+          <input type="text" id="sign_out_initials_field" name="sign_out_initials_field" placeholder="" value="" autocomplete="off"/>
+          <ul id="sign_out_initials_suggestions"></ul>
+        </div>
         <divider></divider>
         <label for="location"><h3>Location</h3></label>
-        <select class="text" id="student_sign_out_location" name="student_sign_out_location" placeholder="" value=""></select>
+        <div class="input_wrapper">
+          <input type="text" id="locations_input_field" name="hint" autocomplete="off"></input>
+          <ul id="location_suggestions"></ul>
+        </div>
         <divider></divider>
         <input class="blue_button" id="student_sign_out_submit" type="submit" value="Submit">
       </form>
@@ -67,10 +86,14 @@
       </header>
       <form id="staff_login_form" class="text" action="" method="POST">
         <label for="staff_username"><h3>Username</h3></label>
-        <input type="text" id="staff_username" name="staff_username" placeholder="" value="">
+        <div class="input_wrapper">
+          <input type="text" id="staff_username" name="staff_username" placeholder="" value="" autocomplete="off">
+        </div>
         <divider></divider>
         <label for="staff_password"><h3>Password</h3></label>
-        <input type="password" id="staff_password" name="staff_password" placeholder="" value="">
+        <div class="input_wrapper">
+          <input type="password" id="staff_password" name="staff_password" placeholder="" value="">
+        </div>
         <divider></divider>
         <input class="blue_button" id="staff_login_submit" type="submit" value="Submit">
       </form>
