Suggested user inputs no longer appear under input fields; made them easier to select.

--- a/pages/html/home_page.html
+++ b/pages/html/home_page.html
@@ -54,7 +54,7 @@
         <label for="sign_in_initials_field"><h3>Your Initials</h3></label>
         <div class="input_wrapper">
           <input type="text" id="sign_in_initials_field" name="sign_in_initials_field" placeholder="" value="" autocomplete="off"/>
-          <ul id="sign_in_initials_suggestions"></ul>
+          <ul id="sign_in_initials_suggestions" class="suggested_inputs"></ul>
         </div>
         <divider></divider>
         <input class="blue_button" id="student_sign_in_submit" type="submit" value="Submit">
@@ -68,13 +68,13 @@
         <label for="sign_out_initials_field"><h3>Your Initials</h3></label>
         <div class="input_wrapper">
           <input type="text" id="sign_out_initials_field" name="sign_out_initials_field" placeholder="" value="" autocomplete="off"/>
-          <ul id="sign_out_initials_suggestions"></ul>
+          <ul id="sign_out_initials_suggestions" class="suggested_inputs"></ul>
         </div>
         <divider></divider>
         <label for="location"><h3>Location</h3></label>
         <div class="input_wrapper">
           <input type="text" id="locations_input_field" name="hint" autocomplete="off"></input>
-          <ul id="location_suggestions"></ul>
+          <ul id="location_suggestions" class="suggested_inputs"></ul>
         </div>
         <divider></divider>
         <input class="blue_button" id="student_sign_out_submit" type="submit" value="Submit">
