--- a/pages/html/home_page.html
+++ b/pages/html/home_page.html
@@ -39,10 +39,10 @@
       </header>
       <div id="student_selection_grid" class="text">
         <container>
-          <button class="sign_in_out_button" onclick="toggleStudentPreset('sign_in')"><h2>Sign In</h2></button>
+          <button class="sign_in_out_button" onclick="toggleStudentPreset('sign_out')"><h2>Sign Out</h2></button>
         </container>
         <container>
-          <button class="sign_in_out_button" onclick="toggleStudentPreset('sign_out')"><h2>Sign Out</h2></button>
+          <button class="sign_in_out_button" onclick="toggleStudentPreset('sign_in')"><h2>Sign In</h2></button>
         </container>
       </div>
     </div>
@@ -53,7 +53,7 @@
       <form id="user_sign_in_form" class="text" action="" method="POST">
         <label for="sign_in_initials_field"><h3>Your Initials</h3></label>
         <div class="input_wrapper">
-          <input type="text" id="sign_in_initials_field" name="sign_in_initials_field" placeholder="" value="" autocomplete="off"/>
+          <input type="text" class="input_field capitalize" id="sign_in_initials_field" name="sign_in_initials_field" placeholder="" value="" autocomplete="off"/>
           <ul id="sign_in_initials_suggestions" class="suggested_inputs"></ul>
         </div>
         <divider></divider>
@@ -67,13 +67,13 @@
       <form id="user_sign_out_form" class="text" action="" method="POST">
         <label for="sign_out_initials_field"><h3>Your Initials</h3></label>
         <div class="input_wrapper">
-          <input type="text" id="sign_out_initials_field" name="sign_out_initials_field" placeholder="" value="" autocomplete="off"/>
+          <input type="text" class="input_field capitalize" id="sign_out_initials_field" name="sign_out_initials_field" placeholder="" value="" autocomplete="off"/>
           <ul id="sign_out_initials_suggestions" class="suggested_inputs"></ul>
         </div>
         <divider></divider>
         <label for="location"><h3>Location</h3></label>
         <div class="input_wrapper">
-          <input type="text" id="locations_input_field" name="hint" autocomplete="off"></input>
+          <input type="text" class="input_field capitalize" id="locations_input_field" name="hint" autocomplete="off"></input>
           <ul id="location_suggestions" class="suggested_inputs"></ul>
         </div>
         <divider></divider>
@@ -87,12 +87,12 @@
       <form id="staff_login_form" class="text" action="" method="POST">
         <label for="staff_username"><h3>Username</h3></label>
         <div class="input_wrapper">
-          <input type="text" id="staff_username" name="staff_username" placeholder="" value="" autocomplete="off">
+          <input type="text" class="input_field" id="staff_username" name="staff_username" placeholder="" value="" autocomplete="off">
         </div>
         <divider></divider>
         <label for="staff_password"><h3>Password</h3></label>
         <div class="input_wrapper">
-          <input type="password" id="staff_password" name="staff_password" placeholder="" value="">
+          <input type="password" class="input_field" id="staff_password" name="staff_password" placeholder="" value="">
         </div>
         <divider></divider>
         <input class="blue_button" id="staff_login_submit" type="submit" value="Submit">
