All staff/moderator/administrator accounts now require a password stored on the database
-> When an administrator wishes to add a staff account, they are requried to give it a password.
-> A random salt is generated and stored with the account
-> The salt is used with the password to generate a hash which is stored with the account
-> When a staff account signs in, the salt is fetched and added to their input password
-> Their password is then hashed and compared to the hash stored on the datase

Additional notes:
-> Reprogrammed most of the 'home_page' PHP to make it run more efficiently
-> General changes like font size, margins etc.

--- a/pages/html/admin_page.html
+++ b/pages/html/admin_page.html
@@ -137,6 +137,10 @@
               <input id="staff_username" name="staff_username" placeholder="Required" type="text" maxlength="32" pattern="[a-zA-Z]+" required></input>
             </div>
             <div class="input_wrapper">
+              <label for="staff_password"><h4>Password*:</h4></label>
+              <input id="staff_password" name="staff_password" placeholder="Required" type="password" maxlength="32" pattern="/^[a-zA-Z0-9!@#\$%\^\&*_=+-]{8,12}$/g" required></input>
+            </div>
+            <div class="input_wrapper">
               <label for="staff_forename"><h4>Forename:</h4></label>
               <input id="staff_forename" name="staff_forename" type="text" placeholder="Optional" maxlength="32" pattern="[a-zA-Z]+"></input>
             </div>
