--- a/pages/html/home_page.html
+++ b/pages/html/home_page.html
@@ -85,6 +85,7 @@
         <h2>Staff Login</h2>
       </header>
       <form id="staff_login_form" class="text" action="" method="POST">
+        <input type="hidden" name="staff_login_form" value="true"/>
         <label for="staff_username"><h3>Username</h3></label>
         <div class="input_wrapper">
           <input type="text" class="input_field" id="staff_username" name="staff_username" placeholder="" value="" autocomplete="off">
