--- a/pages/html/admin_page.html
+++ b/pages/html/admin_page.html
@@ -35,6 +35,7 @@
           <li onclick="toggleMainSection(this.id,'m4')" class="sidebar_button" id="s4"><h4>Events</h4></li>
           <li class="sidebar_subtitle"><h3>Manage Staff</h3></li>
           <li onclick="toggleMainSection(this.id,'m11')" class="sidebar_button" id="s11"><h4>Edit Staff</h4></li>
+          <li onclick="toggleMainSection(this.id,'m12')" class="sidebar_button" id="s12"><h4>Staff Activity</h4></li>
           <li class="sidebar_subtitle"><h3>Manage Users</h3></li>
           <li onclick="toggleMainSection(this.id,'m21')" class="sidebar_button" id="s21"><h4>Edit Users</h4></li>
           <li class="sidebar_subtitle"><h3>Manage Database</h3></li>
@@ -44,7 +45,7 @@
     </div>
     <div class="text main">
       <section class="main_section" id="m1">
-        <h2>Welcome, <?=$_SESSION["staff_username"]?>.</h2>
+        <h2>Welcome, <?=$_SESSION["staffUsername"]?>.</h2>
       </section>
       <section class="main_section" id="m2">
         <h2>Activity</h2>
@@ -168,6 +169,24 @@
             </div>
           </form>
         </section>
+      </section>
+      <section class="main_section" id="m12">
+        <h2 class="title">Staff Activity</h2>
+        <div class="table_wrapper">
+          <header>
+            <h2>Login's</h2>
+          </header>
+          <table class='table' id='staff_accounts_table'>
+            <tr>
+              <th>ID</th>
+              <th>Staff Username</th>
+              <th>Date</th>
+              <th>Time</th>
+            </tr>
+            <?php @include('../php/tables/fill_staff_activity_table.php'); fillStaffActivityTable() ?>
+          </table>
+          <footer/>
+        </div>
       </section>
 
       <section class="main_section" id="m21">
